read_all_json_files is working

--- a/loading_locations_data_into_dataframes.ipynb
+++ b/loading_locations_data_into_dataframes.ipynb
@@ -5312,20 +5312,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# implement me\n",
     "def read_all_json_files(JSON_ROOT):\n",
-    "    json_files = pd.DataFrame()\n",
+    "    json_files = pd.DataFrame() # create an empty DataFrame\n",
     "    # Loop through all files in the JSON_ROOT directory\n",
     "    for files in os.listdir(JSON_ROOT):\n",
     "        full_path = os.path.join(JSON_ROOT, files)\n",
-    "        data = read_json(full_path)\n",
-    "        json_df = pd.DataFrame(data['results'])\n",
-    "        # concat the DataFrame to the json_files DataFrame\n",
-    "        json_files = pd.concat([json_files,json_df], ignore_index=True)\n",
+    "\n",
+    "        try:\n",
+    "            data = read_json(full_path) # read the json file\n",
+    "            json_df = pd.DataFrame(data['results'])\n",
+    "            # concat the DataFrame to the json_files DataFrame\n",
+    "            json_files = pd.concat([json_files,json_df], ignore_index=True)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error reading {full_path}: {e}\")\n",
+    "    \n",
     "    return json_files"
    ]
   },
@@ -5339,20 +5344,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "listdir() takes at most 1 argument (2 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[34]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m dir_path = os.path.join(\u001b[33m'\u001b[39m\u001b[33m./\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mdata\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mlocations\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m df = \u001b[43mread_all_json_files\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdir_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m df.head()\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[33]\u001b[39m\u001b[32m, line 6\u001b[39m, in \u001b[36mread_all_json_files\u001b[39m\u001b[34m(JSON_ROOT)\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Loop through all files in the JSON_ROOT directory\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m files \u001b[38;5;129;01min\u001b[39;00m os.listdir(JSON_ROOT):\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m     full_path = \u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mJSON_ROOT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfiles\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m     data = read_json(full_path)\n\u001b[32m      8\u001b[39m     json_df = pd.DataFrame(data[\u001b[33m'\u001b[39m\u001b[33mresults\u001b[39m\u001b[33m'\u001b[39m])\n",
-      "\u001b[31mTypeError\u001b[39m: listdir() takes at most 1 argument (2 given)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error reading ./data/locations/.gitkeep: Expecting value: line 1 column 1 (char 0)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mindate</th>\n",
+       "      <th>maxdate</th>\n",
+       "      <th>name</th>\n",
+       "      <th>datacoverage</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1894-04-01</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>Lawrence County, IL</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>FIPS:17101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1893-01-01</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>Lee County, IL</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>FIPS:17103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1896-05-01</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>Livingston County, IL</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>FIPS:17105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1906-01-01</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>Logan County, IL</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>FIPS:17107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1902-08-01</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>McDonough County, IL</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>FIPS:17109</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      mindate     maxdate                   name  datacoverage          id\n",
+       "0  1894-04-01  2025-04-12    Lawrence County, IL           1.0  FIPS:17101\n",
+       "1  1893-01-01  2025-04-12         Lee County, IL           1.0  FIPS:17103\n",
+       "2  1896-05-01  2025-04-12  Livingston County, IL           1.0  FIPS:17105\n",
+       "3  1906-01-01  2025-04-12       Logan County, IL           1.0  FIPS:17107\n",
+       "4  1902-08-01  2025-04-12   McDonough County, IL           1.0  FIPS:17109"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
