up to validate recoreds are unique

--- a/loading_locations_data_into_dataframes.ipynb
+++ b/loading_locations_data_into_dataframes.ipynb
@@ -5344,7 +5344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -5353,7 +5353,53 @@
      "text": [
       "Error reading ./data/locations/.gitkeep: Expecting value: line 1 column 1 (char 0)\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "dir_path = os.path.join('./', 'data', 'locations')\n",
+    "df = read_all_json_files(dir_path)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the shape of the DataFrame? Does this match the number of columns and records you expected?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9000, 5)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Validate the shape of the DataFrame here\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Show the first few records of the DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -5436,47 +5482,14 @@
        "4  1902-08-01  2025-04-12   McDonough County, IL           1.0  FIPS:17109"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dir_path = os.path.join('./', 'data', 'locations')\n",
-    "df = read_all_json_files(dir_path)\n",
+    "# Show the first few records\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What is the shape of the DataFrame? Does this match the number of columns and records you expected?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Validate the shape of the DataFrame here\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Show the first few records of the DataFrame."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Show the first few records\n"
    ]
   },
   {
@@ -5488,11 +5501,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mindate</th>\n",
+       "      <th>maxdate</th>\n",
+       "      <th>name</th>\n",
+       "      <th>datacoverage</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8995</th>\n",
+       "      <td>1963-03-01</td>\n",
+       "      <td>2025-04-10</td>\n",
+       "      <td>Kars, TU</td>\n",
+       "      <td>0.9160</td>\n",
+       "      <td>CITY:TU000030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8996</th>\n",
+       "      <td>1930-01-01</td>\n",
+       "      <td>2025-04-10</td>\n",
+       "      <td>Kastamonu, TU</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>CITY:TU000031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8997</th>\n",
+       "      <td>1963-01-01</td>\n",
+       "      <td>2025-04-10</td>\n",
+       "      <td>Kirsehir, TU</td>\n",
+       "      <td>0.9992</td>\n",
+       "      <td>CITY:TU000034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8998</th>\n",
+       "      <td>1950-01-02</td>\n",
+       "      <td>2025-04-10</td>\n",
+       "      <td>Konya, TU</td>\n",
+       "      <td>0.9233</td>\n",
+       "      <td>CITY:TU000036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8999</th>\n",
+       "      <td>2003-03-01</td>\n",
+       "      <td>2025-04-10</td>\n",
+       "      <td>Kutahya, TU</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>CITY:TU000037</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         mindate     maxdate           name  datacoverage             id\n",
+       "8995  1963-03-01  2025-04-10       Kars, TU        0.9160  CITY:TU000030\n",
+       "8996  1930-01-01  2025-04-10  Kastamonu, TU        1.0000  CITY:TU000031\n",
+       "8997  1963-01-01  2025-04-10   Kirsehir, TU        0.9992  CITY:TU000034\n",
+       "8998  1950-01-02  2025-04-10      Konya, TU        0.9233  CITY:TU000036\n",
+       "8999  2003-03-01  2025-04-10    Kutahya, TU        1.0000  CITY:TU000037"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Show the last few records\n"
+    "# Show the last few records\n",
+    "df.tail()"
    ]
   },
   {
