completed up to the Peking in section

--- a/loading_locations_data_into_dataframes.ipynb
+++ b/loading_locations_data_into_dataframes.ipynb
@@ -5312,7 +5312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5326,6 +5326,8 @@
     "        try:\n",
     "            data = read_json(full_path) # read the json file\n",
     "            json_df = pd.DataFrame(data['results'])\n",
+    "            # Add a 'source' column to track the file name\n",
+    "            json_df['source'] = files\n",
     "            # concat the DataFrame to the json_files DataFrame\n",
     "            json_files = pd.concat([json_files,json_df], ignore_index=True)\n",
     "        except Exception as e:\n",
@@ -5344,7 +5346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -5369,16 +5371,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(9000, 5)"
+       "(9000, 6)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5397,7 +5399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -5426,6 +5428,7 @@
        "      <th>name</th>\n",
        "      <th>datacoverage</th>\n",
        "      <th>id</th>\n",
+       "      <th>source</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -5436,6 +5439,7 @@
        "      <td>Lawrence County, IL</td>\n",
        "      <td>1.0</td>\n",
        "      <td>FIPS:17101</td>\n",
+       "      <td>locations_3.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -5444,6 +5448,7 @@
        "      <td>Lee County, IL</td>\n",
        "      <td>1.0</td>\n",
        "      <td>FIPS:17103</td>\n",
+       "      <td>locations_3.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -5452,6 +5457,7 @@
        "      <td>Livingston County, IL</td>\n",
        "      <td>1.0</td>\n",
        "      <td>FIPS:17105</td>\n",
+       "      <td>locations_3.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -5460,6 +5466,7 @@
        "      <td>Logan County, IL</td>\n",
        "      <td>1.0</td>\n",
        "      <td>FIPS:17107</td>\n",
+       "      <td>locations_3.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -5468,21 +5475,29 @@
        "      <td>McDonough County, IL</td>\n",
        "      <td>1.0</td>\n",
        "      <td>FIPS:17109</td>\n",
+       "      <td>locations_3.json</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      mindate     maxdate                   name  datacoverage          id\n",
-       "0  1894-04-01  2025-04-12    Lawrence County, IL           1.0  FIPS:17101\n",
-       "1  1893-01-01  2025-04-12         Lee County, IL           1.0  FIPS:17103\n",
-       "2  1896-05-01  2025-04-12  Livingston County, IL           1.0  FIPS:17105\n",
-       "3  1906-01-01  2025-04-12       Logan County, IL           1.0  FIPS:17107\n",
-       "4  1902-08-01  2025-04-12   McDonough County, IL           1.0  FIPS:17109"
+       "      mindate     maxdate                   name  datacoverage          id  \\\n",
+       "0  1894-04-01  2025-04-12    Lawrence County, IL           1.0  FIPS:17101   \n",
+       "1  1893-01-01  2025-04-12         Lee County, IL           1.0  FIPS:17103   \n",
+       "2  1896-05-01  2025-04-12  Livingston County, IL           1.0  FIPS:17105   \n",
+       "3  1906-01-01  2025-04-12       Logan County, IL           1.0  FIPS:17107   \n",
+       "4  1902-08-01  2025-04-12   McDonough County, IL           1.0  FIPS:17109   \n",
+       "\n",
+       "             source  \n",
+       "0  locations_3.json  \n",
+       "1  locations_3.json  \n",
+       "2  locations_3.json  \n",
+       "3  locations_3.json  \n",
+       "4  locations_3.json  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5501,7 +5516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -5530,6 +5545,7 @@
        "      <th>name</th>\n",
        "      <th>datacoverage</th>\n",
        "      <th>id</th>\n",
+       "      <th>source</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -5540,6 +5556,7 @@
        "      <td>Kars, TU</td>\n",
        "      <td>0.9160</td>\n",
        "      <td>CITY:TU000030</td>\n",
+       "      <td>locations_0.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8996</th>\n",
@@ -5548,6 +5565,7 @@
        "      <td>Kastamonu, TU</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>CITY:TU000031</td>\n",
+       "      <td>locations_0.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8997</th>\n",
@@ -5556,6 +5574,7 @@
        "      <td>Kirsehir, TU</td>\n",
        "      <td>0.9992</td>\n",
        "      <td>CITY:TU000034</td>\n",
+       "      <td>locations_0.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8998</th>\n",
@@ -5564,6 +5583,7 @@
        "      <td>Konya, TU</td>\n",
        "      <td>0.9233</td>\n",
        "      <td>CITY:TU000036</td>\n",
+       "      <td>locations_0.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8999</th>\n",
@@ -5572,21 +5592,29 @@
        "      <td>Kutahya, TU</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>CITY:TU000037</td>\n",
+       "      <td>locations_0.json</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         mindate     maxdate           name  datacoverage             id\n",
-       "8995  1963-03-01  2025-04-10       Kars, TU        0.9160  CITY:TU000030\n",
-       "8996  1930-01-01  2025-04-10  Kastamonu, TU        1.0000  CITY:TU000031\n",
-       "8997  1963-01-01  2025-04-10   Kirsehir, TU        0.9992  CITY:TU000034\n",
-       "8998  1950-01-02  2025-04-10      Konya, TU        0.9233  CITY:TU000036\n",
-       "8999  2003-03-01  2025-04-10    Kutahya, TU        1.0000  CITY:TU000037"
+       "         mindate     maxdate           name  datacoverage             id  \\\n",
+       "8995  1963-03-01  2025-04-10       Kars, TU        0.9160  CITY:TU000030   \n",
+       "8996  1930-01-01  2025-04-10  Kastamonu, TU        1.0000  CITY:TU000031   \n",
+       "8997  1963-01-01  2025-04-10   Kirsehir, TU        0.9992  CITY:TU000034   \n",
+       "8998  1950-01-02  2025-04-10      Konya, TU        0.9233  CITY:TU000036   \n",
+       "8999  2003-03-01  2025-04-10    Kutahya, TU        1.0000  CITY:TU000037   \n",
+       "\n",
+       "                source  \n",
+       "8995  locations_0.json  \n",
+       "8996  locations_0.json  \n",
+       "8997  locations_0.json  \n",
+       "8998  locations_0.json  \n",
+       "8999  locations_0.json  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5613,20 +5641,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mindate</th>\n",
+       "      <th>maxdate</th>\n",
+       "      <th>name</th>\n",
+       "      <th>datacoverage</th>\n",
+       "      <th>id</th>\n",
+       "      <th>source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [mindate, maxdate, name, datacoverage, id, source]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# one day to determine there are not duplicate records\n"
+    "# one day to determine there are not duplicate records\n",
+    "# check for duplicates\n",
+    "duplicates = df[df.duplicated()]\n",
+    "duplicates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are duplicate entries in the 'id' column.\n"
+     ]
+    }
+   ],
    "source": [
-    "# another way to determine there are no duplicate records\n"
+    "# another way to determine there are no duplicate records\n",
+    "# Check if the 'id' column is unique\n",
+    "if df['id'].is_unique:\n",
+    "    print(\"All entries in the 'id' column are unique.\")\n",
+    "else:\n",
+    "    print(\"There are duplicate entries in the 'id' column.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         mindate     maxdate         name  datacoverage             id  \\\n",
+      "7000  2003-03-01  2025-04-10  Kutahya, TU           1.0  CITY:TU000037   \n",
+      "8999  2003-03-01  2025-04-10  Kutahya, TU           1.0  CITY:TU000037   \n",
+      "\n",
+      "                source  \n",
+      "7000  locations_1.json  \n",
+      "8999  locations_0.json  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find duplicate IDs\n",
+    "duplicate_ids = df[df.duplicated(subset='id', keep=False)]\n",
+    "\n",
+    "# Display rows with duplicate IDs\n",
+    "print(duplicate_ids)"
    ]
   },
   {
