--- a/loading_locations_data_into_dataframes.ipynb
+++ b/loading_locations_data_into_dataframes.ipynb
@@ -5761,11 +5761,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mindate</th>\n",
+       "      <th>maxdate</th>\n",
+       "      <th>name</th>\n",
+       "      <th>datacoverage</th>\n",
+       "      <th>id</th>\n",
+       "      <th>source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7002</th>\n",
+       "      <td>1974-08-01</td>\n",
+       "      <td>2025-04-10</td>\n",
+       "      <td>Mersin, TU</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>CITY:TU000041</td>\n",
+       "      <td>locations_1.json</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         mindate     maxdate        name  datacoverage             id  \\\n",
+       "7002  1974-08-01  2025-04-10  Mersin, TU           1.0  CITY:TU000041   \n",
+       "\n",
+       "                source  \n",
+       "7002  locations_1.json  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# \n"
+    "# \n",
+    "df[df['id'] == 'CITY:TU000041']\n"
    ]
   },
   {
@@ -5777,11 +5834,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1002    locations_2.json\n",
+       "Name: source, dtype: object"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# \n"
+    "# \n",
+    "df[df['id'] == 'CLIM:0405']['source']"
    ]
   },
   {
@@ -5793,11 +5863,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "Ther are 9 unique sources in the DataFrame.\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_sources = df['source'].nunique()\n",
+    "print(unique_sources)\n",
+    "print(f'Ther are {unique_sources} unique sources in the DataFrame.')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "source\n",
+       "locations_3.json    1000\n",
+       "locations_2.json    1000\n",
+       "locations_5.json    1000\n",
+       "locations_8.json    1000\n",
+       "locations_4.json    1000\n",
+       "locations_7.json    1000\n",
+       "locations_6.json    1000\n",
+       "locations_1.json    1000\n",
+       "locations_0.json    1000\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# \n"
+    "# i made this by mistake but want to keep\n",
+    "df[df.duplicated(subset='source', keep=False)]['source'].value_counts()"
    ]
   },
   {
