just need to get all 38 from dataacquisitions

--- a/loading_locations_data_into_dataframes.ipynb
+++ b/loading_locations_data_into_dataframes.ipynb
@@ -5941,7 +5941,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export DataFrame to a pickled file called locations_data_frame.pickle. Save it to the data directory.\n"
+    "# export DataFrame to a pickled file called locations_data_frame.pickle. Save it to the data directory.\n",
+    "pickle_path = os.path.join('./', 'data', 'locations', 'locations_data_frame.pickle')\n",
+    "df.to_pickle(pickle_path)\n"
    ]
   }
  ],
