--- a/loading_pickled_data.ipynb
+++ b/loading_pickled_data.ipynb
@@ -2,32 +2,203 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import pandas module\n",
-    "# import os module\n"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define a file path (using os module) pointing to the pickled file from Exercise 1\n",
     "# Create a Pandas DataFrame from the pickled file. Use the file path as an argument.\n",
-    "\n"
+    "pickle_path = os.path.join('./', 'data', 'locations', 'locations_data_frame.pickle')\n",
+    "df_from_pickle = pd.read_pickle(pickle_path)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mindate</th>\n",
+       "      <th>maxdate</th>\n",
+       "      <th>name</th>\n",
+       "      <th>datacoverage</th>\n",
+       "      <th>id</th>\n",
+       "      <th>source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1894-04-01</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>Lawrence County, IL</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>FIPS:17101</td>\n",
+       "      <td>locations_3.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1893-01-01</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>Lee County, IL</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>FIPS:17103</td>\n",
+       "      <td>locations_3.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1896-05-01</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>Livingston County, IL</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>FIPS:17105</td>\n",
+       "      <td>locations_3.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1906-01-01</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>Logan County, IL</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>FIPS:17107</td>\n",
+       "      <td>locations_3.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1902-08-01</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>McDonough County, IL</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>FIPS:17109</td>\n",
+       "      <td>locations_3.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8995</th>\n",
+       "      <td>1963-03-01</td>\n",
+       "      <td>2025-04-10</td>\n",
+       "      <td>Kars, TU</td>\n",
+       "      <td>0.9160</td>\n",
+       "      <td>CITY:TU000030</td>\n",
+       "      <td>locations_0.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8996</th>\n",
+       "      <td>1930-01-01</td>\n",
+       "      <td>2025-04-10</td>\n",
+       "      <td>Kastamonu, TU</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>CITY:TU000031</td>\n",
+       "      <td>locations_0.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8997</th>\n",
+       "      <td>1963-01-01</td>\n",
+       "      <td>2025-04-10</td>\n",
+       "      <td>Kirsehir, TU</td>\n",
+       "      <td>0.9992</td>\n",
+       "      <td>CITY:TU000034</td>\n",
+       "      <td>locations_0.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8998</th>\n",
+       "      <td>1950-01-02</td>\n",
+       "      <td>2025-04-10</td>\n",
+       "      <td>Konya, TU</td>\n",
+       "      <td>0.9233</td>\n",
+       "      <td>CITY:TU000036</td>\n",
+       "      <td>locations_0.json</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8999</th>\n",
+       "      <td>2003-03-01</td>\n",
+       "      <td>2025-04-10</td>\n",
+       "      <td>Kutahya, TU</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>CITY:TU000037</td>\n",
+       "      <td>locations_0.json</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9000 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         mindate     maxdate                   name  datacoverage  \\\n",
+       "0     1894-04-01  2025-04-12    Lawrence County, IL        1.0000   \n",
+       "1     1893-01-01  2025-04-12         Lee County, IL        1.0000   \n",
+       "2     1896-05-01  2025-04-12  Livingston County, IL        1.0000   \n",
+       "3     1906-01-01  2025-04-12       Logan County, IL        1.0000   \n",
+       "4     1902-08-01  2025-04-12   McDonough County, IL        1.0000   \n",
+       "...          ...         ...                    ...           ...   \n",
+       "8995  1963-03-01  2025-04-10               Kars, TU        0.9160   \n",
+       "8996  1930-01-01  2025-04-10          Kastamonu, TU        1.0000   \n",
+       "8997  1963-01-01  2025-04-10           Kirsehir, TU        0.9992   \n",
+       "8998  1950-01-02  2025-04-10              Konya, TU        0.9233   \n",
+       "8999  2003-03-01  2025-04-10            Kutahya, TU        1.0000   \n",
+       "\n",
+       "                 id            source  \n",
+       "0        FIPS:17101  locations_3.json  \n",
+       "1        FIPS:17103  locations_3.json  \n",
+       "2        FIPS:17105  locations_3.json  \n",
+       "3        FIPS:17107  locations_3.json  \n",
+       "4        FIPS:17109  locations_3.json  \n",
+       "...             ...               ...  \n",
+       "8995  CITY:TU000030  locations_0.json  \n",
+       "8996  CITY:TU000031  locations_0.json  \n",
+       "8997  CITY:TU000034  locations_0.json  \n",
+       "8998  CITY:TU000036  locations_0.json  \n",
+       "8999  CITY:TU000037  locations_0.json  \n",
+       "\n",
+       "[9000 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Display the DataFrame\n"
+    "# Display the DataFrame\n",
+    "df_from_pickle"
    ]
   }
  ],
@@ -47,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
